--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.5.0
   shared_preferences: ^2.5.3
   provider: ^6.1.5+1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
