--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   provider: ^6.1.5+1
   uuid: ^4.5.1
   image_picker: ^1.2.0
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
